src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__help_overlay_long_key_rows.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                        ╭ Help ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │  Esc                                          Return to Normal mode                                            ▲│                        │
│                        │  ↑↓←→                                         Move cursor                                                      ││                        │
│                        │  Home/End                                     Line start/end                                                   ││                        │
│                        │  Tab                                          Insert tab / Accept completion                                   ││                        │
│                        │  :w                                           Preview and confirm UPDATE                                       ││                        │
│                        │  type                                         Edit cell value                                                  ││                        │
│                        │  ←→                                           Move cursor                                                      ││                        │
│                        │  Home/End                                     Jump to start/end                                                ││                        │
│                        │  :                                            Open command line                                                ││                        │
│                        │  Esc                                          Exit to Cell Active (draft preserved)                            ││                        │
│                        │  Enter                                        Execute the confirmed statement                                  ││                        │
│                        │  Esc                                          Cancel and return to editor                                      ││                        │
│                        │  Esc                                          Return to Normal mode                                            ││                        │
│                        │  ↑↓←→                                         Move cursor                                                      ││                        │
│                        │  Home / End                                   Line start/end                                                   ┃│                        │
│                        │                                                                                                                ┃│                        │
│                        │▸ Search / Filter                                                                                               ┃│                        │
│                        │  type                                         Type to filter                                                   ┃│                        │
│                        │  type                                         Type to filter                                                   ┃│────────────────────────┘
│                        │  type                                         Type to filter                                                   ┃│────────────────────────┐
│                        │  type                                         Type to search                                                   ┃│                        │
│                        │  Enter                                        Confirm search                                                   ┃│                        │
│                        │  Esc                                          Cancel search                                                    ││                        │
│                        │  Ctrl+N / Ctrl+P / j / k / ↑ / ↓              Scroll down / up                                                 ││                        │
│                        │  Home / End                                   Jump to top / bottom                                             ││                        │
│                        │  Ctrl+D / Ctrl+U                              Scroll half page down / up                                       ││                        │
│                        │  Ctrl+F / Ctrl+B / PageDown / PageUp          Scroll full page down / up                                       ││                        │
│                        │  h / l / ← / →                                Scroll left / right                                              ││                        │
│                        │  /                                            Edit filter                                                      ││                        │
│                        │  Esc                                          Close help                                                       ││                        │
│                        │  ?                                            Close help                                                       ││                        │
│                        │                                                                                                                ││                        │
│                        │▸ Connections                                                                                                   ││                        │
│                        │  Tab/⇧Tab                                     Next/Previous field                                              ││                        │
│                        │  Tab                                          Next field                                                       ││                        │
│                        │  ⇧Tab                                         Previous field                                                   ││                        │
│                        │  Ctrl+S                                       Save and connect                                                 ▼│                        │
│                        │─────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                        │
│                        │ [BROWSE]                                                                                                        │                        │
│                        ╰ /: Filter │ Esc: Close │ ?: Close ──────────────────────────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
