src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__help_overlay_narrow_horizontal_scroll.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_proj… ▸ … ▸ - connected | localhost:5432/test
┌ [1] Explor┐[Info] [Cols] [Idx] [FK] [RLS] [Trig]
│> publi╭ Help ───────────────────────────╮──────┐
│  publi│                             Ret▲│      │
│  publi│                             Mov││      │
│       │                             Lin││      │
│       │                             Ins││      │
│       │                             Pre││      │
│       │                             Edi││      │
│       │                             Mov┃│      │
│       │                             Jum││      │
│       │                             Ope││──────┘
│       │                             Exi││──────┐
│       │                             Exe││      │
│       │                             Can││      │
│       │                             Ret││      │
│       │                             Mov││      │
│       │                             Lin▼│      │
│       │ x  23% ◀︎────═════─────────────▶︎ │      │
│       │─────────────────────────────────│      │
│       │ [BROWSE]                        │      │
└───────╰ /: Filter │ Esc: Close │ ?: Clos╯──────┘
/:Filter  ?:Close
